Add removing buff queue at possition
