# src/api_gen/types/ObservableAPI.ts
@@ -413,6 +413,39 @@ export class ObservableBuffsApi {
     /**
      * @param guildUid
      * @param type
+     * @param position
+     */
+    public buffsControllerRemoveAtWithHttpInfo(guildUid: string, type: 'construction' | 'research' | 'training', position: number, _options?: Configuration): Observable<HttpInfo<Buff>> {
+        const requestContextPromise = this.requestFactory.buffsControllerRemoveAt(guildUid, type, position, _options);
+
+        // build promise chain
+        let middlewarePreObservable = from<RequestContext>(requestContextPromise);
+        for (const middleware of this.configuration.middleware) {
+            middlewarePreObservable = middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => middleware.pre(ctx)));
+        }
+
+        return middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => this.configuration.httpApi.send(ctx))).
+            pipe(mergeMap((response: ResponseContext) => {
+                let middlewarePostObservable = of(response);
+                for (const middleware of this.configuration.middleware) {
+                    middlewarePostObservable = middlewarePostObservable.pipe(mergeMap((rsp: ResponseContext) => middleware.post(rsp)));
+                }
+                return middlewarePostObservable.pipe(map((rsp: ResponseContext) => this.responseProcessor.buffsControllerRemoveAtWithHttpInfo(rsp)));
+            }));
+    }
+
+    /**
+     * @param guildUid
+     * @param type
+     * @param position
+     */
+    public buffsControllerRemoveAt(guildUid: string, type: 'construction' | 'research' | 'training', position: number, _options?: Configuration): Observable<Buff> {
+        return this.buffsControllerRemoveAtWithHttpInfo(guildUid, type, position, _options).pipe(map((apiResponse: HttpInfo<Buff>) => apiResponse.data));
+    }
+
+    /**
+     * @param guildUid
+     * @param type
      */
     public buffsControllerRemoveFirstWithHttpInfo(guildUid: string, type: 'construction' | 'research' | 'training', _options?: Configuration): Observable<HttpInfo<Buff>> {
         const requestContextPromise = this.requestFactory.buffsControllerRemoveFirst(guildUid, type, _options);
